--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# api keys
+.env
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,6 +13,9 @@
 
 # production
 /build
+
+# cache
+.eslintcache
 
 # misc
 .DS_Store
